fix broken loader and top bar spacing

--- a/kahuna/public/stylesheets/components/_loaders.scss
+++ b/kahuna/public/stylesheets/components/_loaders.scss
@@ -29,8 +29,8 @@ _LOADERS.SCSS - Animated loader styles
 
 .saving {
     display: inline;
-    width: 1$smallBaseline;
-    line-height: 1$smallBaseline;
+    width: 15px;
+    line-height: 15px;
     text-align: center;
     padding: 0 2px;
     color: $highlight;
