--- a/kahuna/public/stylesheets/components/_search.scss
+++ b/kahuna/public/stylesheets/components/_search.scss
@@ -78,7 +78,7 @@
 @media screen and (max-width: 1350px) {
     .search__modifier-toggle {
         display: inherit;
-        margin-left: 1$smallBaseline
+        margin-left: 15px;
     }
     .search__modifier-toggle__icon {
         display: inline;
